# GRP-C-ISP-victesa

./: .gitignore  Dockerfile.musl  README.md  auth-README.md  package-lock.json  package.json  server.js  test.mjs
.github/workflows/: ci_image.yml  pr.yml  pr_docker_compose.yml  pr_python_static.yml  publish.yml  publish_custom.yml  publish_dev.yml  publish_xx.yml
backend/: app.py  requirements.txt
client-side/: index.html  package-lock.json  package.json  vite.config.js
client-side/src/: AddPropertyPage.css  AddPropertyPage.jsx  AdminDashboard.css  AdminDashboard.jsx  AdminLayout.jsx  AdminTransactionDetailPage.jsx  AdminTransactionRequests.css  AdminTransactionRequests.jsx  AdvocateApplicationDetails.css  AdvocateApplicationDetails.jsx  AdvocateDashboard.css  AdvocateDashboard.jsx  AdvocateManagement.css  AdvocateManagement.jsx  AdvocateTransactionDetailPage.jsx  AdvocateTransactionPage.jsx  App.css  App.jsx  AuthenticatorSetup.css  AuthenticatorSetup.jsx  Dashboard.css  Dashboard.jsx  Layout.css  Layout.jsx  PropertiesPage.css  PropertiesPage.jsx  PropertyRequests.css  PropertyRequests.jsx  PropertyReviewPage.css  PropertyReviewPage.jsx  SignInForm.css  SignInForm.jsx  SignUpForm.css  SignUpForm.jsx  TransactionDetailPage.css  TransactionDetailPage.jsx  TransactionsPage.css  TransactionsPage.jsx  UserTransactionList.jsx  UserTransactionSummary.jsx  (+4 more)
client-side/src/components/: ActiveTransactions.css  ActiveTransactions.jsx  AdminRoute.jsx  AdminSidebar.jsx  AdminTopbar.jsx  (+46 more)
pytests/iroha_cli_tests/: pyproject.toml
pytests/iroha_torii_tests/: pyproject.toml
(+2 files in other folders)
