[tool.poetry]
name = "iroha_cli_tests"
version = "0.1.0"
description = ""
authors = ["alexstroke <busyfifer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faker = "*"
allure-python-commons = "*"
cryptography = "*"
python-dotenv = "*"
tomlkit = "^0.13.3"

[tool.poetry.dev-dependencies]
pytest = "*"
allure-pytest = "*"
pytest-xdist = "*"
mypy = "*"
black = "*"
flake8 = "*"

[tool.poetry.group.dev.dependencies]
pylint = "^4.0.2"
isort = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



