[tool.poetry]
name = "iroha_torii_tests"
version = "0.1.0"
description = ""
authors = ["alexstroke <111361420+astrokov7@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.5"
pytest = "^8.4.2"
websocket-client = "^1.9.0"
allure-pytest = "^2.15.0"
python-dotenv = "^1.2.1"
faker = "^37.12.0"
jsonschema = "^4.25.1"
pyyaml = "^6.0.3"
toml = "^0.10.2"
black = "^25.9.0"
mypy = "^1.18.2"
flake8 = "^7.3.0"
types-toml = "^0.10.8.20240310"
types-requests = "^2.32.4.20250913"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
